EFCore relation added

--- a/ModelBindingDemo/appsettings.Development.json
+++ b/ModelBindingDemo/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-L27SV6P\\SQLEXPRESS;Database=EFCoreTesting;Trusted_Connection=True;"
   }
 }
