--- a/ModelBindingDemo/appsettings.Development.json
+++ b/ModelBindingDemo/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-L27SV6P\\SQLEXPRESS;Database=EFCoreTesting;Trusted_Connection=True;"
+    "DefaultConnection": "Server=KYAW-OO\\SQLEXPRESS;Database=EFCoreTesting;Trusted_Connection=True;"
   }
 }
