--- a/ModelBindingDemo/appsettings.json
+++ b/ModelBindingDemo/appsettings.json
@@ -6,5 +6,29 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Minimumlevel": {
+      "Default": "Warning",
+      "Overrides": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning"
+      }
+    },
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "Logs/{Date}/log.txt",
+      //    "rollingInterval": "Day",
+      //    "outputTemplate": "{Timestamp:o} [{Level:u3}] ({SourceContext}) - ({ActionName}) {Message:j}{NewLine}{Exception}",
+      //    "retainedFileCountLimit": 3,
+      //    "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+      //  }
+      //}
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName"]
+  }
 }
